# Atlas_ACL_E2E_Demo

./: .gitignore  CMakeLists.txt  acl_deepsort_app.py  build.sh  build_deepsort.sh  build_orange_pi.sh  bytetrack_model_cvt.md  deep_sort_model_cvt.md  deepsort.md  env.md  env_atlas200dk.md  env_atlas300I.md  env_orange_pi.md  profiling.md  readme.md  run.md  run.sh  run_bench.sh  run_deep_sort.sh  run_hw_encode.sh  run_json_config.sh  run_orange_pi.sh  run_yolov3_pp.sh  run_yolov3_pp_video.sh  yolov3_model_cvt.md  yolov4_model_cvt.md  yolov5_model_cvt.md  yolox_model_cvt.md
.github/workflows/: main.yml
bytetrack/: __init__.py  byte_tracker.py  matching.py
bytetrack_csrc/: README.md
bytetrack_csrc/include/: BYTETracker.h  STrack.h  bytetrack.h  dataType.h  kalmanFilter.h  lapjv.h
bytetrack_csrc/src/: BYTETracker.cpp  STrack.cpp  bytetrack.cpp  kalmanFilter.cpp  lapjv.cpp  utils.cpp
cmake/: detect_device.cmake
config/: camera_input.json  deep_sort_demo.json  deep_sort_null.json  int8_multi_batch_test.json  yolov3_benchmark.json  yolov3_demo.json  yolov3_null_output.json  yolov4_demo.json  yolov4_demo_608.json  yolov5_demo.json  yolov5_v5_demo.json  yolov5_v6_demo.json  yolox_bytetrack_demo.json  yolox_bytetrack_pedestrian_demo.json  yolox_demo.json
deep_sort/: linear_assignment.py
model/: aipp_deepsort_feature.cfg  aipp_yolov3_pp.cfg  yolov3_no_pp.prototxt  yolov3_pp.prototxt  yolov4_aipp.cfg  yolov5_remove_nodes.py
quant/: caffe_quant.md  yolov3.py  yolov3_post_only.prototxt
script/: ai1s_install_5.0.5.alpha001.sh
src/: acl_cb_thread.h  acl_demo_app.cpp  acl_model.cpp  acl_model.h  app_profiler.cpp  app_profiler.h  benchmark_demo.cpp  camera_input.cpp  camera_input.h  deep_sort_stream.cpp  deep_sort_stream.h  dev_mem_pool.h  device_manager.cpp  device_manager.h  drawing.h  dvpp_decoder.cpp  dvpp_decoder.h  dvpp_encoder.cpp  dvpp_encoder.h  ffmpeg_input.cpp  ffmpeg_input.h  ffmpeg_output.cpp  ffmpeg_output.h  focus_op.cpp  focus_op.h  freetype_helper.cpp  freetype_helper.h  input_streams.h  jpeg_encode.cpp  jpeg_encode.h  main.cpp  main_hw_encode.cpp  main_rtsp_client_test.cpp  main_yolov3_pp.cpp  main_yolov3_video.cpp  multi_stream_demo.cpp  multi_stream_example.cpp  rtmp_stream.cpp  rtmp_stream.h  rtsp_input.cpp  (+23 more)
src/deep_sort/: deep_sort_main.cpp  deep_sort_py.cpp  deep_sort_py.h
yolov4/: __init__.py  utils.py
yolov5/: postprocess.py
yolox/: __init__.py  postprocess.py
